# siem-lab

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compose.yaml  lab  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  learning-gap.md
.github/workflows/: ci.yml
cases/baseline-benign/: answer.md  brief.md  case.json
cases/false-positive-admin-login/: answer.md  brief.md  case.json
cases/trusted-scanner/: answer.md  brief.md  case.json
cases/web-exploit-probe/: answer.md  brief.md  case.json
cases/windows-encoded-command/: answer.md  brief.md  case.json
configs/nginx/: default.conf
docs/: extending.md  learning-path.md  quickstart.md
docs/examples/: README.md  terminal-session.txt  web-exploit-probe-alerts.ndjson
packs/: baseline-benign.ndjson  false-positive-admin-login.ndjson  linux-reverse-shell.ndjson  trusted-scanner.ndjson  windows-encoded-command.ndjson
rules/: custom-rules.json
scenarios/: baseline-benign.json  false-positive-admin-login.json  linux-reverse-shell.json  trusted-scanner.json  web-bruteforce.json  web-exploit-probe.json  windows-encoded-command.json
siem_lab/: __init__.py  cases.py  cli.py  config.py  docker.py  elastic.py  packs.py  scenarios.py
tests/: check_public_repo.py  test_lab.py
