[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "siem-lab"
version = "0.1.0"
description = "A low-footprint Elastic SIEM lab for local learning and detection validation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SIEM Lab Contributors" }]
keywords = ["elastic", "siem", "security", "detections", "lab"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

[project.scripts]
siem-lab = "siem_lab.cli:main"

[tool.setuptools]
packages = ["siem_lab"]
